@@ -6,6 +6,7 @@ AZUREUS CHANGELOG
 FEATURE: UI   | Added "handshake reserved bytes" column in peer view [amc1]
 
 CHANGE: Core  | Speedup hash-checking by ~30% / less CPU usage [The 8472]
+CHANGE: UI    | Provide both "per-torrent" and "across-torrents" speed menu options [amc1]
 
 BUGFIX: Core  | Fixed bug when trying to add torrents with semi-colon characters in filename [amc1]
 
